[package]
name = "paho-mqtt-redis"
version = "0.3.0"
edition = "2018"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/fpagliughi/mqtt.rust.redis"
repository = "https://github.com/fpagliughi/mqtt.rust.redis"
keywords = [ "MQTT", "IoT", "Paho", "persistence" ]
license = "BSD-3-Clause"
description = """
A library for providing persistence to a Paho MQTT Rust client using 
Redis as the backing store.
"""

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust", branch="develop" }
#paho-mqtt = "0.8"
redis = "0.17"
log = "0.3"
env_logger = "0.3"

