[package]
name = "paho-mqtt-redis"
version = "0.3.0"
edition = "2018"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/fpagliughi/mqtt.rust.redis"
repository = "https://github.com/fpagliughi/mqtt.rust.redis"
keywords = [ "MQTT", "IoT", "Paho", "persistence" ]
license = "BSD-3-Clause"
description = """
A library for providing persistence to a Paho MQTT Rust client using 
a local instance of Redis as the backing store.
"""

[dependencies]
#paho-mqtt = "0.9"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust", branch="master" }
redis = "0.19"
log = "0.4"

[dev-dependencies]
env_logger = "0.8"

