[package]
name = "paho-mqtt-redis"
version = "0.3.2"
edition = "2021"
rust_version = "1.63.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/fpagliughi/mqtt.rust.redis"
repository = "https://github.com/fpagliughi/mqtt.rust.redis"
keywords = [ "MQTT", "IoT", "Paho", "persistence" ]
license = "BSD-3-Clause"
description = """
A library for providing persistence to a Paho MQTT Rust client using 
a local instance of Redis as the backing store.
"""

[dependencies]
paho-mqtt = "0.12"
redis = "0.23"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"

